--- a/settings.html
+++ b/settings.html
@@ -58,6 +58,133 @@
                 </div>
             </div>
 
+            <hr />
+
+            <!-- Pressure / Anxiety System -->
+            <div class="autopulse-section-header">
+                <b>情绪压力系统</b>
+            </div>
+
+            <div class="autopulse-setting-group">
+                <label class="checkbox_label" for="autopulse_pressure_enabled">
+                    <input type="checkbox" id="autopulse_pressure_enabled" />
+                    <span>启用压力系统</span>
+                </label>
+                <small class="autopulse-hint"
+                    style="display:block; margin-left:24px; color:var(--SmartThemeQuoteColor);">（角色等待越久越焦虑，你回复后会有情绪反应）</small>
+            </div>
+
+            <div class="autopulse-setting-group">
+                <label>
+                    <span>当前压力等级：</span>
+                    <span id="autopulse_pressure_display" style="font-weight:bold; color:#4caf50;">😊 等级 0</span>
+                </label>
+            </div>
+
+            <div class="autopulse-setting-group">
+                <label style="display:flex; justify-content:space-between;">
+                    <span>最大压力等级</span>
+                    <span id="autopulse_pressure_max_display" style="font-weight:bold;">4</span>
+                </label>
+                <input type="range" id="autopulse_pressure_max" min="1" max="5" value="4" style="width:100%;" />
+            </div>
+
+            <div class="autopulse-setting-group">
+                <label class="checkbox_label" for="autopulse_pressure_return">
+                    <input type="checkbox" id="autopulse_pressure_return" checked />
+                    <span>启用回归反应</span>
+                </label>
+                <small class="autopulse-hint"
+                    style="display:block; margin-left:24px; color:var(--SmartThemeQuoteColor);">（你回复后角色根据冷落时长表现被安抚/不满/生气）</small>
+            </div>
+
+            <div class="autopulse-actions" style="display:flex; gap:10px; flex-wrap:wrap; margin-top:10px;">
+                <div id="autopulse_test_pressure_up" class="menu_button" title="模拟压力升级">
+                    <span class="fa-solid fa-arrow-up"></span>
+                    <span>压力+1</span>
+                </div>
+                <div id="autopulse_test_pressure_trigger" class="menu_button" title="以当前压力等级触发一次消息">
+                    <span class="fa-solid fa-bolt"></span>
+                    <span>测试触发</span>
+                </div>
+                <div id="autopulse_test_return" class="menu_button" title="模拟回归反应">
+                    <span class="fa-solid fa-heart"></span>
+                    <span>测试回归</span>
+                </div>
+            </div>
+
+            <hr />
+
+            <!-- Jealousy System -->
+            <div class="autopulse-section-header">
+                <b>嫉妒系统 💢</b>
+            </div>
+
+            <div class="autopulse-setting-group">
+                <label class="checkbox_label" for="autopulse_jealousy_enabled">
+                    <input type="checkbox" id="autopulse_jealousy_enabled" />
+                    <span>启用嫉妒系统</span>
+                </label>
+                <small class="autopulse-hint"
+                    style="display:block; margin-left:24px; color:var(--SmartThemeQuoteColor);">（切换角色时，被离开的角色可能嫉妒弹窗）</small>
+            </div>
+
+            <div class="autopulse-setting-group">
+                <label>
+                    <span>选择会嫉妒的角色：</span>
+                    <small class="autopulse-hint"
+                        style="display:block; margin-bottom:5px; color:var(--SmartThemeQuoteColor);">（不选=不会触发嫉妒）</small>
+                </label>
+                <div id="autopulse_jealousy_chars"
+                    style="max-height:150px; overflow-y:auto; border:1px solid var(--SmartThemeBorderColor); padding:5px; border-radius:5px;">
+                    <span class="autopulse-hint">加载中...</span>
+                </div>
+            </div>
+
+            <div class="autopulse-setting-group">
+                <label>
+                    <span>自定义嫉妒提示词</span>
+                    <small class="autopulse-hint">（留空使用默认）</small>
+                </label>
+                <textarea id="autopulse_jealousy_prompt" class="text_pole autopulse-prompt-input" rows="3"
+                    placeholder="留空=默认。示例：你发现对方在和别人聊天了，用1句话表达嫉妒，像发微信一样简短。"></textarea>
+            </div>
+
+            <div class="autopulse-setting-group">
+                <label style="display:flex; justify-content:space-between;">
+                    <span>嫉妒触发概率</span>
+                    <span id="autopulse_jealousy_chance_display" style="font-weight:bold;">50%</span>
+                </label>
+                <input type="range" id="autopulse_jealousy_chance" min="0" max="100" value="50" style="width:100%;" />
+            </div>
+
+            <div class="autopulse-setting-group">
+                <label style="display:flex; justify-content:space-between;">
+                    <span>最短延迟（秒）</span>
+                    <span id="autopulse_jealousy_delay_min_display" style="font-weight:bold;">30s</span>
+                </label>
+                <input type="range" id="autopulse_jealousy_delay_min" min="5" max="300" value="30"
+                    style="width:100%;" />
+            </div>
+
+            <div class="autopulse-setting-group">
+                <label style="display:flex; justify-content:space-between;">
+                    <span>最长延迟（秒）</span>
+                    <span id="autopulse_jealousy_delay_max_display" style="font-weight:bold;">120s</span>
+                </label>
+                <input type="range" id="autopulse_jealousy_delay_max" min="10" max="600" value="120"
+                    style="width:100%;" />
+            </div>
+
+            <div class="autopulse-actions" style="margin-top:10px;">
+                <div id="autopulse_test_jealousy" class="menu_button" title="立即触发当前角色的嫉妒消息">
+                    <span class="fa-solid fa-fire"></span>
+                    <span>测试嫉妒弹窗</span>
+                </div>
+            </div>
+
+            <hr />
+
             <!-- Info Notice -->
             <div class="autopulse-notice">
                 <span class="fa-solid fa-circle-info"></span>
